# Data-Structures-and-Algorithms

./: .gitignore  BinarySearchTree.hpp  BinarySearchTreeTest.cpp  BinaryTree.hpp  BinaryTreeTest.cpp  CMakeLists.txt  DebugTest.cpp  DebugTest.h  DynamicArray.hpp  DynamicArrayTest.cpp  Heap.hpp  LinkedList.hpp  LinkedListTest.cpp  MaxHeap.hpp  MaxHeapTest.cpp  MinHeap.hpp  MinHeapTest.cpp  README.md  Stack.hpp  StackTest.cpp  Tests.h  main.cpp
.coverage/: coverage.BinarySearchTree.hpp.9dcd1296ae23471bf695a9d193a035b1.html  coverage.BinarySearchTreeUnitTest.cpp.24f420d5b963c43b7e8726943baad1be.html  coverage.BinaryTree.hpp.a092c163e6d161cb7037ce10379ac02a.html  coverage.BinaryTreeUnitTest.cpp.e89b18703f494e8eee2455b23dc310aa.html  coverage.DynamicArray.hpp.d3cd477b94c3b678846a6c546aea9b9a.html  coverage.DynamicArrayUnitTest.cpp.e8558c1d7fafeb49d4f1044eca50ee2c.html  coverage.Heap.hpp.c38961ada40a4f783f321b75034f04ee.html  coverage.LinkedList.hpp.722cf6a2874b55da834eeef2fff32f40.html  coverage.LinkedListUnitTest.cpp.b969906cd41491003b1fdd2c63514128.html  coverage.MaxHeap.hpp.0f4892c7531507832d5cf921625e0231.html  coverage.MaxHeapUnitTest.cpp.2d633902ba7de4276402a916ef25065d.html  coverage.MinHeap.hpp.0a73fa4b3f5d64e60604c82d23706850.html  coverage.MinHeapUnitTest.cpp.c0e14c604f439ae7020185a9c366b184.html  coverage.Queue.hpp.fbb8e6d1fd30252af081de368ccccf98.html  coverage.QueueUnitTest.cpp.0bbefa58b3ba80da655daa68ee3aa2fc.html  coverage.Stack.hpp.b61926d3a4997ad94d6db8c72499d783.html  coverage.StackUnitTest.cpp.1105e72129c60c3c1b6711683d7a9822.html  coverage.ThrowingType.hpp.790399bb117a83e63c3f086ab9a8aa0a.html  coverage.functions.html  coverage.gtest-assertion-result.h.6d9aef3934c305e2af13d89fef441583.html  coverage.gtest-assertion-result.h.c3d4eaac46b0251dd8a24879c792ba54.html  coverage.gtest-internal.h.424372506282014b85f3fff4412b2d8f.html  coverage.gtest-internal.h.e0fcf6a49018085dee95dd666ebaa40f.html  coverage.gtest-message.h.0d3032d4348fb6838389c72c2c0c0b66.html  coverage.gtest-message.h.8d5091065e2ca14bb377105323693270.html  coverage.gtest-port.h.03344375d66d0efda16a8aa4d16023ce.html  coverage.gtest-port.h.1f8bd49f39407783da1a033baf48e9ba.html  coverage.gtest-printers.h.9e4f8db6e6d387040439bd7f9363b070.html  coverage.gtest-printers.h.c781cf0b0852c3e7dbbc3269bc2e97b5.html  coverage.gtest-type-util.h.2ae5df71bc75bcbf96b527567bbfff88.html  coverage.gtest-type-util.h.7438ab3e6dfcac9816dd9678090c11e0.html  coverage.gtest.h.0986ef4f8fc8556ffce4b1a1582b1f6c.html  coverage.gtest.h.381b5def4d1e3bde679fb08dc40b2a2e.html  coverage.html
src/main/: main.cpp
src/main/algorithms/: DynamicArrayAlgorithms.hpp
src/main/app/: controls.cpp  controls.h  main.cpp
src/main/controller/: controls.h
src/main/core/algorithms/: ArrayAlgorithms.hpp  DynamicArrayAlgorithms.hpp  README.md
src/main/core/data_structures/: BinarySearchTree.hpp  BinaryTree.hpp  DynamicArray.hpp  HashMap.hpp  Heap.hpp  LinkedList.hpp  MaxHeap.hpp  MinHeap.hpp  Queue.hpp  README.md  Stack.hpp
src/main/data_structures/: BinarySearchTree.hpp  BinaryTree.hpp  DynamicArray.hpp  Heap.hpp  LinkedList.hpp  MaxHeap.hpp  MinHeap.hpp  Queue.hpp  README.md  Stack.hpp
src/main/model/data_structures/: BinarySearchTree.hpp  BinaryTree.hpp  MinHeap.hpp  Queue.hpp  Stack.hpp
src/main/ui/: MainWindow.hpp
src/main/ui/array/: ArrayAnimations.cpp  ArrayAnimations.h  ArrayWidget.cpp  ArrayWidget.h  ArrayWidget.hpp  BinarySearchAnimator.hpp  LinearSearchAnimator.hpp  SearchAnimator.hpp
src/main/ui/common/: resources.qrc
src/main/ui/controller/array/: ArrayAnimations.cpp  ArrayAnimations.h
src/main/ui/service/array/: ArrayAlgorithmFunctors.hpp  ArrayAnimations.cpp  ArrayAnimations.h  SearchAnimator.hpp  SortAnimator.hpp
src/main/ui/view/: MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.ui
src/main/ui/view/array/: ArrayPage.cpp  ArrayPage.h  ArrayPage.ui  ArrayWidget.hpp  ArrayWindow.cpp  ArrayWindow.h  ArrayWindow.hpp  ArrayWindow.ui
src/main/ui/viewmodel/array/: ArrayAlgorithmFunctors.hpp  BinarySearchAnimator.hpp  BubbleSortAnimator.hpp  HeapSortAnimator.hpp  ImprovedBubbleSortAnimator.hpp  InsertSortBSAnimator.hpp  InsertSortLSAnimator.hpp  InsertionSortWithLinearSearchAnimator.hpp  LinearSearchAnimator.hpp  MergeSortAnimator.hpp  QuickSortAnimator.hpp  SearchAnimator.hpp  SortAnimator.hpp
src/main/view/ui/: MainWindow.hpp
src/main/view/ui/array/: ArrayAnimations.cpp  ArrayAnimations.h  ArrayWidget.hpp  BinarySearchAnimator.hpp  SearchAnimator.hpp
src/test/: test.cpp
src/test/algorithms/unit/: DynamicArrayAlgorithmsUnitTest.cpp
src/test/data_structures/: BinarySearchTreeTest.cpp  BinaryTreeTest.cpp  DynamicArrayTest.cpp  LinkedListTest.cpp  MaxHeapTest.cpp  MinHeapTest.cpp  StackTest.cpp  Tests.h
src/test/data_structures/integration/: DataStructuresIntegrationTest.cpp
src/test/data_structures/unit/: BinarySearchTreeUnitTest.cpp  BinaryTreeUnitTest.cpp  DynamicArrayUnitTest.cpp  HashMapUnitTest.cpp  LinkedListUnitTest.cpp  MaxHeapUnitTest.cpp  MinHeapUnitTest.cpp  QueueUnitTest.cpp  StackUnitTest.cpp
src/test/data_structures/utilities/: Record.hpp  ThrowingType.hpp
src/test/integration/: BinarySearchTreeTest.cpp  DynamicArrayTest.cpp  LinkedListTest.cpp  MaxHeapTest.cpp  MinHeapTest.cpp  Tests.h
src/test/unit/: BinarySearchTreeUnitTest.cpp  BinaryTreeUnitTest.cpp  DynamicArrayUnitTest.cpp  LinkedListUnitTest.cpp  MaxHeapUnitTest.cpp  MinHeapUnitTest.cpp  QueueUnitTest.cpp  StackUnitTest.cpp
src/test/utilities/: Record.hpp  ThrowingType.hpp
